# e2e_sae

./: .env.example  .gitignore  .mypy.ini  .pre-commit  .pre-commit-config.yaml  .pylintrc  ACCESS.md  LICENSE  Makefile  README.md  conftest.py  pull_request_template.md  pyproject.toml  requirements.txt  setup.py  setup_pkg.sh
.github/: pull_request_template.md
.github/workflows/: checks.yaml
configs/: max_act_data_mnist.yaml  train_base_tf.yaml  train_base_transformer_pile.yaml  train_mnist.yaml  train_mnist_mod.yaml  train_pythia_70m.yaml
demos/: train_saes.ipynb
e2e_sae/: __init__.py  analysis.py  data.py  hooks.py  loader.py  log.py  losses.py  metrics.py  plotting.py  settings.py  types.py  utils.py
e2e_sae/models/: mlp.py  transformers.py
e2e_sae/scripts/: activation_analysis.py  autointerp.py  generate_dashboards.py  geometric_analysis.py  plot_performance.py  plot_settings.py  resample_direction.py  umap_explore.py  upload_hf_dataset.py  upload_to_hf.py
e2e_sae/scripts/analysis/: activation_analysis.py  autointerp.py  faithfulness.py  geometric_analysis.py  pca_dir0_explore.py  plot_performance.py  plot_settings.py  resample_direction.py  umap_explore.py  utils.py
e2e_sae/scripts/train_mlp_saes/: max_act_data_mnist.py  mnist_saes.yaml  train_mnist_saes.py
e2e_sae/scripts/train_mnist/: run_train_mnist.py
e2e_sae/scripts/train_tlens/: run_train_tlens.py  tiny_gpt2.yaml
e2e_sae/scripts/train_tlens/sample_models/tiny-gpt2_lr-0.001_bs-16_2024-04-21_14-01-14/: final_config.yaml
e2e_sae/scripts/train_tlens_saes/: gpt2_e2e.yaml  gpt2_e2e_local.yaml  gpt2_e2e_local_sweep.yaml  gpt2_e2e_recon.yaml  gpt2_e2e_recon_sweep.yaml  gpt2_e2e_sweep.yaml  gpt2_local.yaml  gpt2_local_sweep.yaml  pythia_14m_e2e.yaml  run_sweep.py  run_sweep_mp.py  run_train_tlens_saes.py  run_wandb_sweep.py  tinystories_1M_e2e.yaml  tinystories_1M_e2e_sweep.yaml  tinystories_1M_local.yaml  tinystories_1M_local_sweep.yaml
mypkg/: utils.py
mypkg/models/: mlp.py
notebooks/: activation-simularity.py  feature_dashboards.ipynb  l1_counterexample.ipynb  lp_analysis.ipynb  plots.ipynb  sparse_coding_toy_data_lp.ipynb  sparse_coding_toy_data_lp.py  sparse_coding_toy_exploration.ipynb  upload_huggingface.ipynb
scripts/: config_devy.yaml  config_pythia14m.yaml  gpt2_config.yaml  max_act_data_mnist.py  sparse_coding_mnist_playground.ipynb  sparse_coding_toy_data_playground.ipynb  sparse_coding_toy_data_transcoder.ipynb  train.py  train_mnist.py  train_mnist_mod.py  train_tlens.py
scripts/train_tlens_saes/: gpt2.yaml  pythia_14m.yaml  run_train_tlens_saes.py  tinystories_1M.yaml
sparsify/: __init__.py  analysis.py  configs.py  custom_load.py  data.py  hook_fns.py  hook_manager.py  hooks.py  loader.py  log.py  losses.py  metrics.py  model_loading.py  train_tlens_saes.py  types.py  utils.py
sparsify/models/: __init__.py  mlp.py  models.py  sparsifiers.py  transformers.py
sparsify/scripts/: dashboards.yaml  generate_dashboards.py  geometric_analysis.py  plot_performance.py  umap_features.py  upload_hf_dataset.py
sparsify/scripts/analysis/: appx-e2e-recon.py  download_saes.py  get_acts.py  position-info.py  prompt_analysis.py
sparsify/scripts/generate_dashboards/: demo.ipynb  generate_dashboards.py
sparsify/scripts/mlp_saes/: max_act_data_mnist.py  max_act_data_mnist.yaml  mnist_saes.yaml  train_mnist_mod.yaml  train_mnist_saes.py
sparsify/scripts/train_mlp_saes/: max_act_data_mnist.py  mnist_saes.yaml  train_mnist_saes.py
sparsify/scripts/train_mnist/: mnist.yaml  run_train_mnist.py
sparsify/scripts/train_tlens/: custom_model.yaml  run_train_tlens.py  tiny_gpt2.yaml
sparsify/scripts/train_tlens/sample_models/tiny-gpt2_lr-0.001_bs-16_2024-04-21_14-01-14/: epoch_1.pt  final_config.yaml
sparsify/scripts/train_tlens_saes/: attn-only-4l.yaml  collect_frequency_metrics.py  custom_model.yaml  gpt2-like-joseph.yaml  gpt2-pile10k.yaml  gpt2.yaml  gpt2_e2e.yaml  gpt2_e2e_recon.yaml  gpt2_e2e_recon_sweep.yaml  gpt2_e2e_sweep.yaml  gpt2_layerwise.yaml  gpt2_layerwise_sweep.yaml  gpt2_local.yaml  gpt2_local_sweep.yaml  gpt2_sweep.yaml  pythia_14m.yaml  run_layer_sweep.py  run_sweep.py  run_sweep_mp.py  run_train_tlens_saes.py  run_train_tlens_saes_layerwise.py  run_wandb_sweep.py  tiny-stories-1M.yaml  tiny_gpt2.yaml  tinystories_1M.yaml  tinystories_1M_e2e_recon_sweep.yaml  tinystories_1M_e2e_sweep.yaml  tinystories_1M_layerwise.yaml  tinystories_1M_layerwise_sweep.yaml  tinystories_1M_local_sweep.yaml  tinystories_1M_sweep.yaml  tinystories_1M_sweep_e2e.yaml
tests/: test_dashboards.py  test_metrics.py  test_mlp.py  test_sae.py  test_train_tlens_saes.py  test_transformer.py  test_utils.py  utils.py
